feat: menu api and seeder
