# user/api/permission/v1/permission.pb.validate.go
@@ -2020,3 +2020,110 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = ListSubjectPermissionResponseValidationError{}
+
+// Validate checks the field values on PermissionRequirement with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *PermissionRequirement) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on PermissionRequirement with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// PermissionRequirementMultiError, or nil if none found.
+func (m *PermissionRequirement) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *PermissionRequirement) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Namespace
+
+	// no validation rules for Resource
+
+	// no validation rules for Action
+
+	if len(errors) > 0 {
+		return PermissionRequirementMultiError(errors)
+	}
+	return nil
+}
+
+// PermissionRequirementMultiError is an error wrapping multiple validation
+// errors returned by PermissionRequirement.ValidateAll() if the designated
+// constraints aren't met.
+type PermissionRequirementMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m PermissionRequirementMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m PermissionRequirementMultiError) AllErrors() []error { return m }
+
+// PermissionRequirementValidationError is the validation error returned by
+// PermissionRequirement.Validate if the designated constraints aren't met.
+type PermissionRequirementValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e PermissionRequirementValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e PermissionRequirementValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e PermissionRequirementValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e PermissionRequirementValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e PermissionRequirementValidationError) ErrorName() string {
+	return "PermissionRequirementValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e PermissionRequirementValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sPermissionRequirement.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = PermissionRequirementValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = PermissionRequirementValidationError{}
